@@ -151,8 +151,10 @@ CHANGES
     "literal" is first derived from the Python type of the 
     literal, assuming standard native Python types + date 
     types, before falling back to that of the known type
-    on the other side of the expression.  Also part
-    of [ticket:1683].
+    on the other side of the expression.  If the 
+    "fallback" type is compatible (i.e. CHAR from String),
+    the literal side will use that.  Also part of 
+    [ticket:1683].
 
   - Made sqlalchemy.sql.expressions.Executable part of public 
     API, used for any expression construct that can be sent to
